issue #533: added fix for page jump when you hover on next/previous article

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -824,10 +824,12 @@ a.toc-anchor {
 
 .previous-guide {
   float: left;
+  border-bottom: 1px solid transparent;
 }
 
 .next-guide {
   float: right;
+  border-bottom: 1px solid transparent;
 }
 
 /**
